--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,14 +2,11 @@
 	"compilerOptions": {
 		"baseUrl": ".",
 		"paths": {
-			"@components/*": ["components/*"],
-			"@data/*": ["data/*"],
-			"@utils/*": ["utils/*"],
-			"@layouts/*": ["layouts/*"],
-			"@lib/*": ["lib/*"],
-			"@styles/*": ["styles/*"],
-			"@hooks/*": ["hooks/*"],
-			"@constants/*": ["constants/*"]
+			"@/components/*": ["./components/*"],
+			"@/constants/*": ["./constants/*"],
+			"@/lib/*": ["./lib/*"],
+			"@/styles/*": ["./styles/*"],
+			"@/utils/*": ["./utils/*"]
 		}
 	}
 }
