--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 	},
 	"devDependencies": {
 		"autoprefixer": "^10.4.0",
+		"emailjs-com": "^3.2.0",
 		"eslint": "8.5.0",
 		"eslint-config-next": "12.0.7",
 		"next-themes": "^0.0.15",
