--- a/package.json
+++ b/package.json
@@ -1,26 +1,23 @@
 {
-	"name": "personal-site",
-	"private": true,
-	"scripts": {
-		"dev": "next dev",
-		"build": "next build",
-		"start": "next start",
-		"lint": "next lint"
-	},
-	"dependencies": {
-		"axios": "^0.24.0",
-		"next": "12.0.7",
-		"react": "17.0.2",
-		"react-dom": "17.0.2"
-	},
-	"devDependencies": {
-		"autoprefixer": "^10.4.0",
-		"emailjs-com": "^3.2.0",
-		"eslint": "8.5.0",
-		"eslint-config-next": "12.0.7",
-		"next-themes": "^0.0.15",
-		"postcss": "^8.4.5",
-		"react-rough-notation": "^1.0.1",
-		"tailwindcss": "^3.0.8"
-	}
+  "name": "personal-site",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
+  "dependencies": {
+    "next": "12.0.7",
+    "react": "17.0.2",
+    "react-dom": "17.0.2"
+  },
+  "devDependencies": {
+    "@types/node": "17.0.5",
+    "@types/react": "17.0.38",
+    "eslint": "8.5.0",
+    "eslint-config-next": "12.0.7",
+    "next-themes": "^0.0.15",
+    "typescript": "4.5.4"
+  }
 }
