--- a/package.json
+++ b/package.json
@@ -8,16 +8,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.26.1",
+    "emailjs-com": "^3.2.0",
     "next": "12.0.7",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-rough-notation": "^1.0.2"
   },
   "devDependencies": {
     "@types/node": "17.0.5",
-    "@types/react": "17.0.38",
+    "@types/react": "^17.0.40",
+    "autoprefixer": "^10.4.2",
     "eslint": "8.5.0",
     "eslint-config-next": "12.0.7",
     "next-themes": "^0.0.15",
+    "postcss": "^8.4.8",
+    "tailwindcss": "^3.0.23",
     "typescript": "4.5.4"
   }
 }
